# sdl_test

./: .aider.chat.history.md  .aider.input.history  .clang-format  .coderabbit.yaml  CMakeLists.txt  README.md  gen-pr.config.yml  main.cpp
.aider.tags.cache.v4/: cache.db
.github/workflows/: clang-tidy-review.yml  cmake-linux.yml  cmake-multi-platform.yml  cmake-windows.yml  codeql.yml  gen-pr.yml
data_type/: CMakeLists.txt
data_type/modules/: data_type.ixx
glsl_reflector/: CMakeLists.txt  glsl_reflector.ixx
glsl_reflector/modules/: glsl_reflector.ixx  glsl_reflector.type.ixx
glsl_reflector/test/: test.cpp
logos/: CMakeLists.txt
logos/modules/: logos.ixx
sdl_wrapper/: CMakeLists.txt  arch.md  sdl_callback_implement.cpp  sdl_wrapper.app.ixx  sdl_wrapper.buffer.cpp  sdl_wrapper.buffer.ixx  sdl_wrapper.decl.ixx  sdl_wrapper.gpu.cpp  sdl_wrapper.gpu.ixx  sdl_wrapper.ixx  sdl_wrapper.pipeline.cpp  sdl_wrapper.pipeline.ixx  sdl_wrapper.render_data.ixx  sdl_wrapper.render_procedural.cpp  sdl_wrapper.render_procedural.ixx  sdl_wrapper.renderable.ixx  sdl_wrapper.vertex_layout.ixx  sdl_wrapper.window.cpp  sdl_wrapper.window.ixx
sdl_wrapper/modules/: lifecycle.ixx  sdl_wrapper.buffer.ixx  sdl_wrapper.decl.ixx  sdl_wrapper.gpu.ixx  sdl_wrapper.ixx  sdl_wrapper.render_data.ixx  sdl_wrapper.render_data_impl.ixx  sdl_wrapper.render_procedural.ixx  sdl_wrapper.renderable.ixx  sdl_wrapper.texture.ixx  sdl_wrapper.transfer_buffer.ixx  sdl_wrapper.vertex_layout.ixx
sdl_wrapper/modules/sdl_raii/: sdl_raii.bound_raii.ixx  sdl_raii.bound_traits.ixx  sdl_raii.claim_window.ixx  sdl_raii.gpu_buffer.ixx  sdl_raii.gpu_device.ixx  sdl_raii.gpu_graphics_pipeline.ixx  sdl_raii.gpu_resource.ixx  sdl_raii.gpu_resource_raii.ixx  sdl_raii.gpu_sampler.ixx  sdl_raii.gpu_shader.ixx  sdl_raii.gpu_texture.ixx  sdl_raii.gpu_transfer_buffer.ixx  sdl_raii.ixx  sdl_raii.pure_raii.ixx  sdl_raii.pure_traits.ixx  sdl_raii.transfer_buffer.ixx  sdl_raii.window.ixx
sdl_wrapper/src/: lifecycle.cpp  sdl_wrapper.buffer.cpp  sdl_wrapper.gpu.cpp  sdl_wrapper.render_data.cpp  sdl_wrapper.render_procedural.cpp  sdl_wrapper.texture.cpp  sdl_wrapper.transfer_buffer.cpp
